# jjdiff

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: console.py
src/jjdiff/: __init__.py  change.py  config.py  console.py  deprioritize.py  diff.py  drawable.py  edit.py  editor.py  grid.py  keyboard.py  text.py
src/jjdiff/editor/: cursor.py  editor.py
src/jjdiff/editor/render/: change.py  change_binary.py  change_deprioritized.py  change_file.py  change_textbox.py  change_title.py  changes.py  styles.py
src/jjdiff/tui/: console.py  drawable.py  fill.py  keyboard.py  scroll.py  text.py
tests/: conftest.py  test_change.py  test_diff.py  types.py  utils.py
