[project]
name = "jjdiff"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daan van der Kallen", email = "mail@daanvdk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
jjdiff = "jjdiff:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false

[tool.poe.tasks]
lint = "ruff check"
format = "ruff format"
"format:check" = "ruff format --check"
typecheck = "pyright"
test = "pytest"
check = ["lint", "format", "typecheck", "test"]
